@@ -52,7 +52,9 @@ package com.openexchange.folderstorage.mail;
 import static com.openexchange.folderstorage.mail.MailFolderStorage.closeMailAccess;
 import static com.openexchange.mail.utils.MailFolderUtility.prepareMailFolderParam;
 import gnu.trove.map.hash.TIntIntHashMap;
+import java.util.EnumSet;
 import java.util.Locale;
+import java.util.Set;
 import java.util.concurrent.ConcurrentMap;
 import com.openexchange.config.ConfigurationService;
 import com.openexchange.exception.OXException;
@@ -84,6 +86,7 @@ import com.openexchange.mail.api.IMailFolderStorageEnhanced;
 import com.openexchange.mail.api.IMailFolderStorageEnhanced2;
 import com.openexchange.mail.api.IMailMessageStorage;
 import com.openexchange.mail.api.MailAccess;
+import com.openexchange.mail.api.MailCapabilities;
 import com.openexchange.mail.api.MailConfig;
 import com.openexchange.mail.dataobjects.MailFolder;
 import com.openexchange.mail.permission.DefaultMailPermission;
@@ -147,6 +150,8 @@ public final class MailFolderImpl extends AbstractFolder implements FolderExtens
         }
 
     }
+
+    private static Set<MailFolderType> STANDARD_FOLDER_TYPES = EnumSet.of(MailFolderType.INBOX, MailFolderType.TRASH, MailFolderType.DRAFTS, MailFolderType.SENT, MailFolderType.SPAM);
 
     private final MailFolderType mailFolderType;
     private final boolean cacheable;
@@ -224,7 +229,6 @@ public final class MailFolderImpl extends AbstractFolder implements FolderExtens
         final boolean ignoreSubscription = mailConfig.getMailProperties().isIgnoreSubscription();
         subscribed = ignoreSubscription ? true : mailFolder.isSubscribed(); // || mailFolder.hasSubscribedSubfolders();
         subscribedSubfolders = ignoreSubscription ? mailFolder.hasSubfolders() : mailFolder.hasSubscribedSubfolders();
-        this.capabilities = mailConfig.getCapabilities().getCapabilities();
         {
             final String value =
                 mailFolder.isRootFolder() ? "" : new StringBuilder(16).append('(').append(mailFolder.getMessageCount()).append('/').append(
@@ -352,6 +356,14 @@ public final class MailFolderImpl extends AbstractFolder implements FolderExtens
                 mailFolderType = MailFolderType.NONE;
             }
             this.mailFolderType = mailFolderType;
+        }
+        {
+            int caps = mailConfig.getCapabilities().getCapabilities();
+            if ((caps & MailCapabilities.BIT_SUBSCRIPTION) > 0 && STANDARD_FOLDER_TYPES.contains(this.mailFolderType)) {
+                // Subscribe/unsubscribe not allowed for standard folder
+                caps &= ~MailCapabilities.BIT_SUBSCRIPTION;
+            }
+            this.capabilities = caps;
         }
         if (!mailFolder.isHoldsFolders() && mp.canCreateSubfolders()) {
             // Cannot contain subfolders; therefore deny subfolder creation
