@@ -1,3 +1,7 @@
+* 2014-07-28 - thorben.betten@open-xchange.com
+
+ - Fix for bug 33728: Drop SUBSCRIPTION bit from capabilities bit mask if not allowed
+
 * 2014-07-26 - thorben.betten@open-xchange.com
 
  - Fix for bug 33620: Sanitize RSS feed's title, too
